[package]
name = "nom-reprap-response"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
nom-gcode = "0.1.0"
# nom-reprap-response = { version = "0.1.0", features = ["serde"] }
nom-reprap-response = { git = "https://github.com/D1plo1d/nom-reprap-response.git", features = ["serde"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
env_logger = "0.9.0"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.55", features = ["Window", "Document", "HtmlCollection", "NodeList", "File", "HtmlInputElement"] }
